--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ inputs:
     required: false
     default: ""
   extraLocalSettings:
-    description: 'Path to file that will be appended to LocalSettings.php during the installation. It can contain wfLoadExtension() lines, etc.'
+    description: 'Relative path to file that will be appended to LocalSettings.php during the installation. It can contain wfLoadExtension() lines, etc. (this path is relative to the directory where this action is invoked)'
     required: false
     default: ""
 
@@ -54,5 +54,5 @@ runs:
           --dbpass "${{ inputs.dbpass }}" \
           --scriptpath "/w"
         echo -en "\n\nrequire_once __DIR__ . '/includes/DevelopmentSettings.php';\n" >> ./LocalSettings.php
-        [[ -z "${{ inputs.extraLocalSettings }}" ]] || echo -en "\n\nrequire_once '${{ inputs.extraLocalSettings }}';\n" >> ./LocalSettings.php
+        [[ -z "${{ inputs.extraLocalSettings }}" ]] || echo -en "\n\nrequire_once __DIR__ . '/../${{ inputs.extraLocalSettings }}';\n" >> ./LocalSettings.php
         php -l ./LocalSettings.php
